KRunner: Set location before showing

Make sure the location is set before showing the window to ensure
the first appearance is animated correctly, too.

BUG: 447096